Fix overflow preperty for header div

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,10 @@ body {
   font-size: 16px;
 }
 
+header div {
+  overflow: hidden;
+}
+
 div {
   overflow: auto;
 }
